--- a/application/admin/view/public/form_js.html
+++ b/application/admin/view/public/form_js.html
@@ -46,6 +46,7 @@
         })
         $(".initTemplate").click(function () {
             dataUrl = $(this).attr('dataid');
+            console.log(dataUrl)
             $(".confirm").click()
             $("#subForm").submit()
         })
