--- a/application/admin/view/template/index.html
+++ b/application/admin/view/template/index.html
@@ -21,6 +21,9 @@
         width: auto;
     }
 
+    .btn-group{
+        margin-top: 10px;
+    }
     .btn-group>.btn:not(:first-child):not(:last-child):not(.dropdown-toggle) {
         border-right: 0;
         border-left: 0;
@@ -31,7 +34,7 @@
         table-layout: automatic;
     }
 
-    table td {
+    #table td {
         max-width: 150px;
         overflow: hidden;
         text-overflow: ellipsis;
@@ -68,26 +71,25 @@
             <div id="myTabContent" class="tab-content">
                 <div id="firstPage" class="tab-pane active">
                     <div id="toolbar" style="width: 100%;">
-                        <div class="btn-group" style="margin-right: 30px;">
+                        <div class="btn-group" class="col-lg-3" style="margin-right: 30px;">
                             <button id="btn_delete" type="button" class="btn btn-danger">
                                 <span class="fa fa-remove" aria-hidden="true"></span>删除
                             </button>
                             <button id="btn_refresh" type="button" class="btn btn-success">
                                 <span class="fa fa-refresh" aria-hidden="true"></span>刷新
-
-                                <button id="copy" class="btn btn-info" dataid="{$template.tid}">
-                                    <span class="fa fa-share"></span>分享
-                                </button>
-                                {if $template.ttype=="1"}
-                                <a href="{:url('admin/Word/export_word',['tId' => $tId])}" target="_blank"
-                                    class="btn btn-default"><span class="fa fa-file-word-o"></span>导出word</a>
-                                {/if}
-                                <a href="{$shareUrl}" target="_blank" class="btn btn-default"><span
-                                        class="fa fa-eye"></span>查看表单</a>
+                            </button>
+                            <button id="copy" class="btn btn-info" dataid="{$template.tid}">
+                                <span class="fa fa-share"></span>分享
+                            </button>
+                            {if $template.ttype=="1"}
+                            <a href="{:url('admin/Word/export_word',['tId' => $tId])}" target="_blank"
+                                class="btn btn-default"><span class="fa fa-file-word-o"></span>导出word</a>
+                            {/if}
+                            <a href="{$shareUrl}" target="_blank" class="btn btn-default"><span
+                                    class="fa fa-eye"></span>表单</a>
 
                         </div>
-                       
-                        <div class="btn-group" style="margin-right: 30px;">
+                        <div class="btn-group" class="col-lg-3" style="margin-right: 30px;">
                             <select name="refreshTime" class="btn" id="refreshTime" style="height: 32px;">
                                 <option value=10000>10秒</option>
                                 <option value=30000 selected>30秒</option>
@@ -98,23 +100,22 @@
                                     style="position: unset;margin-left: 5px;margin-top: unset;" id="lunxun"
                                     checked></label>
                         </div>
-                        <div class="btn-group" style="margin-right: 30px;">
-                            <select name="searchField" class="btn" id="searchField" style="max-width: 200px;height: 32px;">
+                        <div class="btn-group" class="col-lg-3"  style="margin-right: 30px;">
+                            <select name="searchField" class="btn" id="searchField"
+                                style="max-width: 200px;height: 32px;">
                                 <option value="content.all">全部</option>
                                 {volist name="searchFields" id="vo"}
                                 <option value="{$vo.field}">{$vo.title}</option>
                                 {/volist}
                             </select>
-                            <input class="btn" type="text" id="searchText" placeholder="搜索">
-                            <div class="btn-group">
-                                <button id="btn_search" type="button" class="btn btn-success">
-                                    <span class="fa fa-search" aria-hidden="true"></span>查询
-                                </button>
-                                <button id="btn_reset" type="button" class="btn btn-default">重置
-                                </button>
-                            </div>
+                            <input class="btn" type="text" id="searchText" placeholder="搜索内容">
+                            <button id="btn_search" type="button" class="btn btn-success">
+                                <span class="fa fa-search" aria-hidden="true"></span>查询
+                            </button>
+                            <button id="btn_reset" type="button" class="btn btn-default">重置
+                            </button>
                         </div>
-                        <div class="btn-group">
+                        <div class="btn-group" class="col-lg-3" >
                             <select name="exportType" class="btn" id="exportType" style="height: 32px;">
                                 <option value="all" selected>全部</option>
                                 <option value="all_update">更新</option>
@@ -229,6 +230,7 @@
             return "否";
         }
     }
+    
     $("#secondTab").click(function () {
         $.ajax({
             url: "{:url('admin/Template/getNoData')}",
@@ -241,8 +243,9 @@
                 if (data.code == 1) {
                     $("#secondTable").empty();
                     if (data.data.length != 0) {
-
+                        $("#secondTab").html('未填数据 <span class="badge badge-success">'+data.data.length+'</span>')
                         var text = "<tr>";
+                        var text2=""
                         $(data.data).each(function (index, value) {
                             index = index + 1
                             if (index != 0 && index % 10 == 0) {
@@ -265,7 +268,6 @@
 
 
     var isPC = IsPC();
-
     if (isPC) {
         function confirm(msg, title, url, data) {
             layer.confirm(msg, {
@@ -289,8 +291,8 @@
                 }
             });
         }
-
     }
+
     $("#btn_delete").click(function () {
         var rows = $('#table').bootstrapTable('getSelections');// 获得要删除的数据
         // rows 主要是为了判断是否选中，下面的else内容才是主要
@@ -307,7 +309,6 @@
             confirm('确定删除吗？', '删除数据', "{:url('admin/Template/del')}", "ids=" + ids)
         }
     });
-
 
     $("#btn_refresh").click(function () {
         $('#table').bootstrapTable('refresh');
@@ -346,6 +347,7 @@
             }
         })
     })
+    
     let timerId = 1 // 模拟计时器id，唯一性
     let timerObj = {} // 计时器存储器
     let time = 10000;
