--- a/application/admin/view/template/index.html
+++ b/application/admin/view/template/index.html
@@ -21,9 +21,10 @@
         width: auto;
     }
 
-    .btn-group{
+    .btn-group {
         margin-top: 10px;
     }
+
     .btn-group>.btn:not(:first-child):not(:last-child):not(.dropdown-toggle) {
         border-right: 0;
         border-left: 0;
@@ -100,7 +101,7 @@
                                     style="position: unset;margin-left: 5px;margin-top: unset;" id="lunxun"
                                     checked></label>
                         </div>
-                        <div class="btn-group" class="col-lg-3"  style="margin-right: 30px;">
+                        <div class="btn-group" class="col-lg-3" style="margin-right: 30px;">
                             <select name="searchField" class="btn" id="searchField"
                                 style="max-width: 200px;height: 32px;">
                                 <option value="content.all">全部</option>
@@ -115,7 +116,7 @@
                             <button id="btn_reset" type="button" class="btn btn-default">重置
                             </button>
                         </div>
-                        <div class="btn-group" class="col-lg-3" >
+                        <div class="btn-group" class="col-lg-3">
                             <select name="exportType" class="btn" id="exportType" style="height: 32px;">
                                 <option value="all" selected>全部</option>
                                 <option value="all_update">更新</option>
@@ -230,7 +231,7 @@
             return "否";
         }
     }
-    
+
     $("#secondTab").click(function () {
         $.ajax({
             url: "{:url('admin/Template/getNoData')}",
@@ -243,18 +244,18 @@
                 if (data.code == 1) {
                     $("#secondTable").empty();
                     if (data.data.length != 0) {
-                        $("#secondTab").html('未填数据 <span class="badge badge-success">'+data.data.length+'</span>')
+                        $("#secondTab").html('未填数据 <span class="badge badge-success">' + data.data.length + '</span>')
                         var text = "<tr>";
-                        var text2=""
+                        var text2 = ""
                         $(data.data).each(function (index, value) {
                             index = index + 1
                             if (index != 0 && index % 10 == 0) {
                                 text = text + "</tr><tr>"
                             } else {
                                 text = text + "<td>" + value + " </td>"
-                            }text2=text2+'<label class="col-lg-2 col-md-3 col-sm-5">'+value+'</label>'
+                            } text2 = text2 + '<label class="col-lg-2 col-md-3 col-sm-5">' + value + '</label>'
                         });
-                        
+
                         text = text + "</tr>"
                         $("#secondTable").append(text2);
                     } else {
@@ -334,7 +335,16 @@
                 date: $("#exportType").val()
             },
             dataType: 'json',
+            beforeSend: function () {
+                //显示正在加载数据
+                loadIndex = layer.msg('文件较大，请耐心等待', {
+                    icon: 16
+                    , shade: 0.01
+                    ,skin: 'layui-layer-rim', //加上边框
+                });
+            },
             success: function (ret) {
+                layer.close(loadIndex);
                 if (ret.code === 1) {
                     var $a = $("<a>");
                     $a.attr("href", ret.file);
@@ -348,7 +358,7 @@
             }
         })
     })
-    
+
     let timerId = 1 // 模拟计时器id，唯一性
     let timerObj = {} // 计时器存储器
     let time = 10000;
