--- a/application/index/view/template/template.html
+++ b/application/index/view/template/template.html
@@ -155,7 +155,7 @@
 
         $.validator.addMethod("phone", function (value, element) {
             var length = value.length;
-            var mobile = /^(13[0-9]{9})|(18[0-9]{9})|(14[0-9]{9})|(17[0-9]{9})|(15[0-9]{9})$/;
+            var mobile = /^1[3|4|5|6|7|8|9][0-9]{9}$/;
             return this.optional(element) || (length == 11 && mobile.test(value));
         }, "请正确填写您的手机号码");
 
