--- a/application/index/view/template/template.html
+++ b/application/index/view/template/template.html
@@ -2,99 +2,93 @@
 <html lang="zh-CN">
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta itemprop="name" content="{$template.tname}">
-    <meta name="description" itemprop="description" content="{$template.tname}">
-    <meta name="author" content="Li Jian">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta itemprop="name" content="{$template.tname}" />
+    <meta name="description" itemprop="description" content="{$template.tname}" />
+    <meta name="author" content="Li Jian" />
     <link rel="shortcut icon" type="IMG/x-icon" href="/favicon.ico" />
     <title>{$template.tname}</title>
     <!-- Bootstrap core CSS -->
-    <link href="__CSS__/bootstrap.min.css" rel="stylesheet">
+    <link href="__CSS__/bootstrap.min.css" rel="stylesheet" />
     <!-- Bootstrap theme -->
     <!-- <link href="__CSS__/bootstrap-theme.min.css" rel="stylesheet"> -->
     <!-- <link href="__CSS__/span-awesome.min.css" rel="stylesheet"> -->
-    <link href="__CSS__/index.css" rel="stylesheet">
+    <link href="__CSS__/index.css" rel="stylesheet" />
     <script src="__LIB__/laydate/laydate.js"></script>
 </head>
 
-
 <body>
-    <div class="container" style="margin-top: 50px;margin-bottom: 50px;">
-        <div class="row  col-lg-offset-1">
-            <div class="col-lg-10 form-block-background" style="padding-bottom:20px;padding-top:20px;">
+    <div class="container" style="margin-top: 50px; margin-bottom: 50px">
+        <div class="row col-lg-offset-1">
+            <div class="col-lg-10 form-block-background" style="padding-bottom: 20px; padding-top: 20px">
                 <form class="form-horizontal" role="form" id="subForm" autocomplete="off">
-                    <legend style="text-align: center;font-size:24px;">{$template.tname}</legend>
+                    <legend style="text-align: center; font-size: 24px">
+                        {$template.tname}
+                    </legend>
                     <!-- 倒计时 -->
-                    <div class="col-lg-12 text-center" style="margin-bottom: 20px;">
+                    <div class="col-lg-12 text-center" style="margin-bottom: 20px">
                         <div id="show"></div>
                     </div>
                     {neq name="remarks" value=""}
                     <div class="col-lg-12 alert alert-info">
-                        <p>
-                            {php} echo nl2br($remarks) {/php}
-                        </p>
+                        <p>{php} echo nl2br($remarks) {/php}</p>
                     </div>
-                    {/neq}
-                    {volist name="optionList" id="vo" key="k"}
+                    {/neq} {volist name="optionList" id="vo" key="k"}
                     <div class="form-group">
                         <label for="{$key}" class="col-lg-12">
                             <span class="blod">{$k}.&nbsp;&nbsp;</span>
-                            {$vo.title}
-                            {neq name="$vo.rule" value="text"}
-                            <span class="redInfo">*
-                            </span>
+                            {$vo.title} {neq name="$vo.rule" value="text"}
+                            <span class="redInfo">* </span>
                             {/neq}
-                        </label>
-                        {switch vo.type}
-                        {case date}
+                        </label> {switch vo.type} {case date}
                         <div class="col-lg-12">
-                            <input type="text" class="form-control required" id="{$key}" name="{$key}">
+                            <input type="text" class="form-control required" id="{$key}" name="{$key}" />
 
-                        <script>
-                            laydate.render({
-                                elem: "#{$key}" //指定元素
-                                , type: 'date'
-                                , formact: 'yyyy年MM月dd日'
-                                // , min: date.toLocaleString(),
-                            });
-                        </script>
+                            <script>
+                                laydate.render({
+                                    elem: "#{$key}", //指定元素
+                                    type: "date",
+                                    formact: "yyyy年MM月dd日",
+                                    // , min: date.toLocaleString(),
+                                    trigger: "click", //自动弹出控件的事件，采用click弹出
+                                });
+                            </script>
                         </div>
-                        {/case}
-                        {case time}
+                        {/case} {case time}
                         <div class="col-lg-12">
-                            <input type="text" class="form-control required" id="{$key}" name="{$key}">
+                            <input type="text" class="form-control required" id="{$key}" name="{$key}" />
 
-                        <script>
-                            laydate.render({
-                                elem: "#{$key}" //指定元素
-                                , type: 'time'
-                            });
-                        </script>
+                            <script>
+                                laydate.render({
+                                    elem: "#{$key}", //指定元素
+                                    type: "time",
+                                    trigger: "click", //自动弹出控件的事件，采用click弹出
+                                });
+                            </script>
                         </div>
-                        {/case}
-                        {case datetime}
+                        {/case} {case datetime}
                         <div class="col-lg-12">
-                            <input type="text" class="form-control" id="{$key}" name="{$key}">
+                            <input type="text" class="form-control" id="{$key}" name="{$key}" />
                         </div>
                         <script>
                             laydate.render({
-                                elem: '#' + "{$key}" //指定元素
-                                , type: 'datetime'
+                                elem: "#" + "{$key}", //指定元素
+                                type: "datetime",
+                                trigger: "click", //自动弹出控件的事件，采用click弹出
                             });
                         </script>
-                        {/case}
-                        {case select}
+                        {/case} {case select}
                         <!-- 输出select -->
                         {elt name="$vo.options|count" value="4"}
                         <div class="col-lg-10">
                             <ul class="list-group">
                                 {foreach name="vo.options" item="voo" key="kk"}
-                                <label style="width:100%;" class="list-group-item">
-                                    <input type="radio" name="{$key}" class="required" value="{$voo}"> {$voo}
-                                </label>
-                                {/foreach}
+                                <label style="width: 100%" class="list-group-item">
+                                    <input type="radio" name="{$key}" class="required" value="{$voo}" />
+                                    {$voo}
+                                </label> {/foreach}
                             </ul>
                         </div>
                         {else /}
@@ -106,22 +100,19 @@
                                 {/volist}
                             </select>
                         </div>
-                        {/elt}
-                        {/case}
-                        {default /}
+                        {/elt} {/case} {default /}
                         <!-- 默认输出input -->
                         <div class="col-lg-12">
-                            <input type="text" class="form-control  {$vo.rule|split}" id="{$key}" name="{$key}">
+                            <input type="text" class="form-control {$vo.rule|split}" id="{$key}" name="{$key}" />
                         </div>
                         {/switch}
                     </div>
                     {/volist}
-                    <div class="form-group" style="margin-top: 50px;">
-                        <input type="button" style="height: 40px;" class="btn btn-info form-control" id="submitOpt"
-                            value="提交">
+                    <div class="form-group" style="margin-top: 50px">
+                        <input type="button" style="height: 40px" class="btn btn-info form-control" id="submitOpt" value="提交" />
                     </div>
 
-                    <input type="hidden" name="tid" value="{$template.tid}">
+                    <input type="hidden" name="tid" value="{$template.tid}" />
                     <input type="hidden" name="recordid" id="recordid" value=>
                 </form>
             </div>
@@ -135,9 +126,8 @@
         }
     </style>
     <div class="footer">
-        <div style="font-size:12px;">
-            <span>备案号:</span><a style="color:#444;" rel="nofollow noopener" target="_blank"
-                href="http://beian.miit.gov.cn">豫ICP备2020026352号</a>
+        <div style="font-size: 12px">
+            <span>备案号:</span><a style="color: #444" rel="nofollow noopener" target="_blank" href="http://beian.miit.gov.cn">豫ICP备2020026352号</a>
         </div>
     </div>
 
@@ -149,28 +139,32 @@
     <script src="__JS__/messages_zh.min.js"></script>
     <script src="__JS__/index.js"></script>
     <script type="text/javascript">
-        $("#submitOpt").click(function () {
+        $("#submitOpt").click(function() {
             $("#subForm").submit();
         });
 
-        $.validator.addMethod("phone", function (value, element) {
-            var length = value.length;
-            var mobile = /^1[3|4|5|6|7|8|9][0-9]{9}$/;
-            return this.optional(element) || (length == 11 && mobile.test(value));
-        }, "请正确填写您的手机号码");
+        $.validator.addMethod(
+            "phone",
+            function(value, element) {
+                var length = value.length;
+                var mobile = /^1[3|4|5|6|7|8|9][0-9]{9}$/;
+                return this.optional(element) || (length == 11 && mobile.test(value));
+            },
+            "请正确填写您的手机号码"
+        );
 
         $("#subForm").validate({
-            submitHandler: function (form) {
+            submitHandler: function(form) {
                 $.ajax({
                     url: "{:url('index/Template/collect')}",
                     type: "post",
                     dataType: "json",
                     data: $("form").serialize(),
-                    success: function (data) {
+                    success: function(data) {
                         if (data.code == 1) {
                             showMsgAndHref(data);
                         } else if (data.code == 101) {
-                            $("#recordid").val(data.data)
+                            $("#recordid").val(data.data);
                             confirm(
                                 data.msg,
                                 "数据覆盖确认",
@@ -185,9 +179,9 @@
             },
         });
 
-
         var timerID = null;
         var flag = 1;
+
         function TimeDown(id, endDate) {
             var t;
             if (parseInt(endDate) > 0 && flag == 1) {
@@ -197,12 +191,12 @@
                 var totalSeconds = parseInt(endDate - nowDate);
                 if (totalSeconds <= 0) {
                     layer.open({
-                        content: '已经截止提交',
-                        yes: function (index, layero) {
+                        content: "已经截止提交",
+                        yes: function(index, layero) {
                             window.clearTimeout(timerID);
-                            window.location.href = "/"
+                            window.location.href = "/";
                             layer.close(index); //如果设定了yes回调，需进行手工关闭
-                        }
+                        },
                     });
                 }
                 //天数
@@ -217,11 +211,20 @@
                 //秒
                 var seconds = modulo % 60;
                 //输出到页面
-                document.getElementById(id).innerHTML = "还剩:" + days + "天" + hours + "小时" + minutes + "分钟" + seconds + "秒";
+                document.getElementById(id).innerHTML =
+                    "还剩:" +
+                    days +
+                    "天" +
+                    hours +
+                    "小时" +
+                    minutes +
+                    "分钟" +
+                    seconds +
+                    "秒";
                 //延迟一秒执行自己
-                timerID = setTimeout(function () {
+                timerID = setTimeout(function() {
                     TimeDown(id, endDate);
-                }, 1000)
+                }, 1000);
             }
         }
 
